Fix flickering of monitor value in Safari with CSS hack.
Root cause is probably the flex implementation on Safari.

--- a/src/components/monitor/monitor.css
+++ b/src/components/monitor/monitor.css
@@ -41,6 +41,7 @@
     margin: 0 5px;
     border-radius: calc($space / 2);
     padding: 0 2px;
+    transform: translateZ(0); /* Fixes flickering in Safari */
 }
 
 .large-value {
@@ -50,4 +51,5 @@
     text-align: center;
     color: white;
     font-size: 1rem;
+    transform: translateZ(0); /* Fixes flickering in Safari */
 }
